tests/checker/diagnostics/0696_fcm_two_package_type_mismatch_04.ml.infer.expected
File "0696_fcm_two_package_type_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0696_fcm_two_package_type_mismatch_04 is not a valid module name.

File "0696_fcm_two_package_type_mismatch_04.ml", line 9, characters 3-10:
9 |   (P.value : Q.t)
       ^^^^^^^
Error: The value P.value has type P.t but an expression was expected of type
         Q.t
